[package]
name = "arb-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["abigen", "contract", "tokio-runtime"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
rusqlite = { version = "0.29", features = ["bundled"] }
