[package]
name = "polygon-arb-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ethers = { version = "2.0", features = ["abigen", "contract", "tokio-runtime", "rustls"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
