[package]
name = "polygon-arb-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Ethereum & Polygon interaction
ethers = "2.0.14"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Environment variables
dotenvy = "0.15"

# SQLite database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
